<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dip"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >
        </LinearLayout>
    </LinearLayout>

    <CheckBox
        android:id="@+id/checkBox__gps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="26dp"
        android:layout_toLeftOf="@+id/button__resetButton"
        android:layout_weight="1"
        android:checked="false"
        android:enabled="true"
        android:text="@string/gps" 
        android:visibility="invisible"/>





    <Button
        android:id="@+id/button__getButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_weight="1"
        android:minWidth="256dp"
        android:text="@string/getButton" />
    
        <Button
        android:id="@+id/button__picButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignLeft="@+id/button__getButton"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="74dp"
        android:minWidth="256dp"
        android:text="@string/pic" 
        android:onClick="takePicture" />
    
        <Button
        android:id="@+id/button__sendButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/linearLayout2"
        android:layout_alignLeft="@+id/button__getButton"
        android:layout_marginTop="138dp"
        android:gravity="center_vertical|center_horizontal|top|bottom"
        android:minWidth="256dp"
        android:scrollbars="vertical"
        android:text="@string/send" />

    <TextView
        android:id="@+id/textView__about"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/linearLayout2"
        android:layout_below="@+id/linearLayout2"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:text="@string/about" />

    <Button
        android:id="@+id/button__resetButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/button__sendButton"
        android:layout_below="@+id/button__sendButton"
        android:layout_weight="1"
        android:text="@string/resetButton"
        android:visibility="invisible" />

</RelativeLayout>