<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".GetPicture" >
    
    <TextView
        android:id="@+id/gpsText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:text="@string/coordinates"
        android:textSize="12sp" />

    

    <ImageView
        android:id="@+id/photoResultView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@+id/gpsText"
        android:layout_marginTop="16dp"
        android:minHeight="256dp"
        android:minWidth="256dp"
        android:src="@android:drawable/alert_light_frame" />

    <Button
        android:id="@+id/takePicButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/photoResultView"
        android:layout_marginTop="16dp"
        android:text="@string/takePicture" 
        android:visibility="visible"/>

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/takePicButton"
        android:layout_marginTop="16dp"
        android:text="@string/sendInfo" />

</RelativeLayout>
